﻿## WARNING

**SPT-Aki 3.7.0 & 0.13.5.0.* support is still under development. Both SIT and SPT-Aki may contain game breaking bugs.**

## New features

* Bots Count on Coop UI
* Add DrakiaXYZ Waypoints solution back in (with Roaming AI enabled)
* Add PMC AI Archetype (PMCRushSpawn) 
* Add Chinese Localization for Match Hosting / Browsing system, thanks @w123456w30w
* Add Japanese Localization for Match Hosting / Browsing system, thanks @debisuchan

## Fixes

* Fix Item Movement Replication into Containers & Dead Bodies
* Fix Issue where Loose Loot items where not disappearing when being picked up
* Fix Ping Display & High Ping mode
* Fix Coop Session was not ending after host leaves (therefore showing as still running on Browser)
* Fix memory leak whilst "Waiting for Players" as a Host
* Fix memory leak during long matches on large maps
* Performance Improvements
* Fix dual/double packet issue
* Fix multiple Player Sync packets being sent
* Divided ActionPacketHandlerComponent from CoopGameComponent improving frame performance

## Misc

* Continue looking into performance improvements that can be made
	* RAM gets eaten up if I leave Garbage Collection (GC) as normal (thanks to BSG and Unity)
	* My own GC keeps RAM usage fairly stable
	* There is a known issue of noticeable lag every few minutes or so
* Disabled Airdrop Logic from Aki as it doesn't replicate

---

**Update your Official Escape From Tarkov**

Remember, you must update your Online and Offline installs to use this.

**Update your SPT-Aki server**

* The SPT-Aki team will release an updated server for each new version of Tarkov.
* You can usually find the most up-to-date server on their [Website](https://www.sp-tarkov.com/).
* If the latest server is not on their website, it will be under development on their [Discord](https://discord.com/invite/Xn9msqQZan).
* The Server usually goes through several updates found in the dev-core section of their [Discord](https://discord.com/invite/Xn9msqQZan).